Correction accessibilité et contrastes

--- a/frontend/src/pages/homePage/_homePage.scss
+++ b/frontend/src/pages/homePage/_homePage.scss
@@ -26,6 +26,14 @@
     background-color: $color-primary;
 
 }
+.displayLabelAndInputImage{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#colorLabelChooseImage{
+    color: $color-black !important;
+}
 .widthButtonSelectImage {
     cursor: pointer;
 }
